--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,5 +4,5 @@
       [collapsed]="isSideNavCollapsed"
       [screenWidth]="screenWidth"
   ></app-body>
-  <router-outlet></router-outlet> <!-- This is where the routed components will be displayed -->
+  <router-outlet></router-outlet>
 </div>
