--- a/src/app/dashboard/statistics/statistics.component.html
+++ b/src/app/dashboard/statistics/statistics.component.html
@@ -1,1 +1,8 @@
-<p>statistics works!</p>
+<div id="container" style="display: flex; justify-content: space-between; width: 100%;">
+    <div style="margin-right: 20px;">
+        <app-geo-map></app-geo-map>
+    </div>
+    <div style="margin-left: auto;">
+        <app-event-distribution></app-event-distribution>
+    </div>
+</div>
