--- a/src/app/dashboard/user/user.component.css
+++ b/src/app/dashboard/user/user.component.css
@@ -22,6 +22,7 @@
     font-size: 1rem;
 }
 
+
 .header-container {
   display: flex;
   align-items: center; 
@@ -44,4 +45,30 @@
 .toast-error {
   background-color: #dc3545; 
 }
+
+.blur-background {
+  filter: blur(3px);
+  pointer-events: none; 
+}
+
+.modal {
+  z-index: 1000; 
+}
+
+.modal-dialog {
+  z-index: 1010; 
+}
+
+.show {
+  display: block;
+}
+
+.modal-title {
+  font-size: 24px; 
+  font-weight: bold; 
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
 
