--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="users && users.length > 0">
+<div *ngIf="users && users.length > 0" [ngClass]="{'blur-background': showModal || showDeleteModal || showUpdateModal}">
   <div class="header-container">
   <h2>Users Management</h2>
   <div *ngIf="isSuperAdmin()" class="button-container">
@@ -35,9 +35,7 @@
   </mat-table>
 </div>
 
-<div *ngIf="users.length === 0">
-  <p>No users found.</p>
-</div>
+<ng-toast [width]="300" [position]="ToasterPosition.BOTTOM_RIGHT" />
 
 <!-- Add User Modal -->
 <div class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': showModal}" [ngStyle]="{'display': showModal ? 'block' : 'none'}">
