event distribution chart added

--- a/src/app/dashboard/statistics/statistics.component.html
+++ b/src/app/dashboard/statistics/statistics.component.html
@@ -1,8 +1,10 @@
-<div id="container" style="display: flex; justify-content: space-between; width: 100%;">
-    <div style="margin-right: 20px;">
-        <app-geo-map></app-geo-map>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7"> <!-- 7/12 ≈ 58.33% -->
+      <app-geo-map></app-geo-map>
     </div>
-    <div style="margin-left: auto;">
-        <app-event-distribution></app-event-distribution>
+    <div class="col-md-5"> <!-- 5/12 ≈ 41.67% -->
+      <app-event-distribution></app-event-distribution>
     </div>
+  </div>
 </div>
