--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+<app-topnav></app-topnav>
 <div class="dashboard-container">
   <app-body
       [collapsed]="isSideNavCollapsed"
