--- a/src/app/dashboard/statistics/statistics.component.html
+++ b/src/app/dashboard/statistics/statistics.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-7"> <!-- 7/12 ≈ 58.33% -->
+    <div class="col-md-7"> 
       <app-geo-map></app-geo-map>
     </div>
-    <div class="col-md-5"> <!-- 5/12 ≈ 41.67% -->
+    <div class="col-md-5"> 
       <app-event-distribution></app-event-distribution>
     </div>
   </div>
