--- a/src/app/dashboard/sidenav/sidenav.component.html
+++ b/src/app/dashboard/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed' : ''">
     <div class="logo-container">
         <button class="logo" (click)="toggleCollapse()">
-        <img src="logo.png" alt="Logo" class="logo-image" />
+        <img src="logo-dash.png" alt="Logo" class="logo-image" />
         </button>
         <div class="logo-text" @fadeInOut *ngIf="collapsed">Dashboard</div>
         <button class="btn-close" @rotate *ngIf="collapsed" (click)="closeSidenav()">
