--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,56 @@
-<!-- login.component.html -->
-<div class="d-flex justify-content-center align-items-center vh-100">
-  <div class="col-md-4 col-sm-8 login-container p-4 shadow rounded">
-    <h2 class="text-center mb-4">Login</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group mb-3">
-        <label for="username" class="form-label">Username:</label>
-        <input type="text" class="form-control" formControlName="username" id="username" autocomplete="off" placeholder="Enter your username">
-        <div class="error text-danger mt-1" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">
+<div class="register">
+      <div class="div">
+        <div class="left-content">
+          <div class="overlap">
+            <div class="bg"></div>
+            <div class="group">
+              <div class="overlap-group">
+                <div class="ellipse"></div>
+                <div class="ellipse-2"></div>
+              </div>
+            </div>
+            <div class="content">
+              <div class="frame">
+                <div class="div-wrapper">
+                  <p class="text-wrapper">
+                    Sign in to access the dashboard 
+                  </p>
+                </div>
+                <div class="frame-2">
+                  <div class="text-wrapper-2">Read More</div>
+                </div>
+              </div>
+            </div>
+            <img class="logo" src="logo-login.png" />
+          </div>
+        </div>
+        <div class="right-content">
+          <div class="title">
+            <div class="text-wrapper-3">Hello!</div>
+            <p class="p">Sign In to Get Started</p>
+          </div>
+          <form class="form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <div  class="form-group input-wrapper">
+              <input class="input" placeholder="Email Address" type="email" formControlName="username" id="username" />
+              <img class="img" src="codicon-mail.svg" />
+              <div class="error text-danger mt-1" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">
           Username is required
         </div>
-      </div>
-      <div class="form-group mb-3">
-        <label for="pwd" class="form-label">Password:</label>
-        <input type="password" class="form-control" formControlName="password" id="pwd" autocomplete="off" placeholder="Enter your password">
-        <div class="error text-danger mt-1" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">
+            </div>
+            <div class="form-group input-wrapper">
+              <input class="input" placeholder="Password" type="password" formControlName="password" id="pwd" />
+              <img class="img" src="bx-bxs-lock-alt.svg" />
+              <div class="error text-danger mt-1" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">
           Password is required
         </div>
-      </div>
-      <button class="btn btn-primary w-100" [disabled]="loginForm.invalid">Login</button>
-      <div *ngIf="invalidLogin" class="error text-danger text-center mt-3">
+            </div>
+            <button class="button" [disabled]="loginForm.invalid">
+              <div class="text-wrapper-5">Login</div>
+            </button>
+            <div *ngIf="invalidLogin" class="error text-danger text-center mt-3">
         <div>Invalid credentials.</div>
       </div>
-    </form>
-  </div>
-</div>
+          </form>
+        </div>
+      </div>
+    </div>
